--- a/front-end/package.json
+++ b/front-end/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/stack": "^6.3.16",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.17.1",
@@ -16,7 +18,9 @@
     "react-native": "0.70.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "css-loader": "^6.7.3",
+    "style-loader": "^3.3.1"
   },
   "private": true
 }
