--- a/front-end/package.json
+++ b/front-end/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "expo": "~47.0.12",
+    "expo-radio-button": "^1.0.8",
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.17.1",
     "react": "18.1.0",
