--- a/front-end/package.json
+++ b/front-end/package.json
@@ -18,7 +18,8 @@
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.17.1",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-native-wheel-scrollview-picker": "^2.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
