--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,14 +13,14 @@
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
-    "expo": "~47.0.12",
+    "expo": "^46.0.21",
+    "expo-image-picker": "~14.0.2",
     "expo-radio-button": "^1.0.8",
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.17.1",
     "react": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-wheel-scrollview-picker": "^2.0.1",
-    "expo-image-picker": "~14.0.2"
+    "react-native-wheel-scrollview-picker": "^2.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
