--- a/front-end/package.json
+++ b/front-end/package.json
@@ -20,6 +20,7 @@
     "firebase": "^9.17.1",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-toast-message": "^2.1.6",
     "react-native-wheel-scrollview-picker": "^2.0.1"
   },
   "devDependencies": {
