--- a/firebase.json
+++ b/firebase.json
@@ -17,5 +17,8 @@
   ],
   "storage": {
     "rules": "storage.rules"
+  },
+  "extensions": {
+    "firestore-send-email": "firebase/firestore-send-email@0.1.25"
   }
 }
